<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Just Java</string>

    <!-- Hint text for name text field [CHAR LIMIT = 20] -->
    <string name="user_name">Name</string>

    <!-- Header text for toppings list [CHAR LIMIT = 20] -->
    <string name="toppings_header">Toppings</string>

    <!-- Label text for whipped cream [CHAR LIMIT = 20] -->
    <string name="whipped_cream">Whipped cream</string>

    <!-- Label text for chocolate [CHAR LIMIT = 20] -->
    <string name="chocolate">Chocolade</string>

    <!-- Header text for quantity selector [CHAR LIMIT = 20] -->
    <string name="quantity_header">Quantity</string>

    <!-- Header text for quantity selector [CHAR LIMIT = 20] -->
    <string name="quantity">2</string>

    <!-- Text on Order button [CHAR LIMIT = 20] -->
    <string name="order_button">Order</string>

    <!-- Name label of the order summary [CHAR LIMIT = 20] -->
    <string name="order_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g> </string>

    <!-- Whipped cream label of the order summary [CHAR LIMIT = 20] -->
    <string name="order_whipped_cream">Add whipped cream? <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>

    <!-- Chocolate label of the order summary [CHAR LIMIT = 20] -->
    <string name="order_chocolate">Add chocolate? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>

    <!-- Quantity label of the order summary [CHAR LIMIT = 20] -->
    <string name="order_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>

    <!-- Totla label of the order summary [CHAR LIMIT = 20] -->
    <string name="order_total">Total: <xliff:g example="$10" id="price">%s</xliff:g></string>

    <!-- Thank you [CHAR LIMIT = 20] -->
    <string name="thank_you">Thank you!</string>

    <!-- Order summary e-mail subject [CHAR LIMIT = 50] -->
    <string name="order_subject">JustJava order for <xliff:g example="Amy" id="userName">%s</xliff:g></string>

    <!-- Toast warning message for decrement at 1 [CHAR LIMIT = 50] -->
    <string name="decrement_warning">You have to order at least 1 coffee!</string>

    <!-- Toast warning message for increment at 100  [CHAR LIMIT = 50] -->
    <string name="increment_warning">You cannot order more than 100 coffees!</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="coffee_image">coffee image</string>
    <string name="increment_error">You cannot order more than 100 coffees!</string>
    <string name="decrement_error">You have to order at least 1 coffee!</string>
</resources>
