<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matchPar"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/layout1">

        <EditText
            android:id="@+id/user_name"
            style="@style/textField"
            android:hint="@string/user_name" />

        <TextView
            android:id="@+id/toppings_label"
            style="@style/heading"
            android:text="@string/toppings_header" />

        <CheckBox
            android:id="@+id/has_whipped_cream"
            style="@style/checkBox"
            android:text="@string/whipped_cream" />

        <CheckBox
            android:id="@+id/has_chocolate"
            style="@style/checkBox"
            android:text="@string/chocolate" />

        <TextView
            android:id="@+id/quantity_label"
            style="@style/heading"
            android:text="@string/quantity_header" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                style="@style/button"
                android:onClick="decrement"
                android:text="@string/decrement" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/quantity"
                android:text="@string/quantity" />

            <Button
                style="@style/button"
                android:onClick="increment"
                android:text="@string/increment" />

        </LinearLayout>

        <Button
            android:id="@+id/order_btn"
            style="@style/buttonSubmit"
            android:onClick="submitOrder"
            android:text="@string/order_button" />

    </LinearLayout>

    <ImageView
        style="@style/bottomImg"
        android:contentDescription="@string/coffee_image"
        android:src="@drawable/coffee_bottom" />

</RelativeLayout>


